--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="banner-text">
           <h2>Explore Your Travel</h2>
           <p>
-            Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-            adipiscing. In et odio <br />
-            enim ac quis sapien urna eu phasellus.
+            Embrace new cultures, savor local cuisines, discover hidden gems,
+            forge connections, and create <br />lifelong memories. Adventure
+            awaits!
           </p>
         </div>
         <div class="banner-inputs">
@@ -58,6 +58,44 @@
         </div>
       </section>
       <!-- Banner Area Ends -->
+
+      <!-- Tours area Starts -->
+      <section class="tour-area">
+        <div class="tour-text">
+          <h3 class="section-header">Our Popular Tours</h3>
+          <p class="para-text">
+            Master Traveller's popular tours offer thrilling adventures, expert
+            guides, cultural immersion, and unparalleled experiences for
+            unforgettable journeys worldwide.
+          </p>
+          <ul>
+            <li class="para-text">
+              Master Traveller excels in crafting unforgettable journeys with
+              expert guides, seamless logistics, and immersive cultural
+              experiences.
+            </li>
+            <li class="para-text">
+              Their popular tours blend adventure and comfort, ensuring
+              travelers explore iconic destinations with authenticity and style.
+            </li>
+            <li class="para-text">
+              With Master Traveller, expect personalized service, attention to
+              detail, and a commitment to creating lifelong travel memories.
+            </li>
+          </ul>
+          <p class="para-text">
+            In Addition, our popular tours at Master Traveller offer
+            unparalleled experiences, expertly curated itineraries, and a
+            commitment to creating lasting memories. Embark on a journey with us
+            and discover the world anew.
+          </p>
+          <button class="btn">Read More</button>
+        </div>
+        <div class="tour-image">
+          <img src="./Images/tour.png" alt="" />
+        </div>
+      </section>
+      <!-- Tours area Ends -->
     </main>
     <!-- <footer>This is footer</footer> -->
   </body>
