destination and choose area done

--- a/index.html
+++ b/index.html
@@ -96,6 +96,93 @@
         </div>
       </section>
       <!-- Tours area Ends -->
+
+      <!-- Destination area starts-->
+      <section class="destination-area">
+        <div class="destination-text">
+          <h3 class="section-header">Choose Your Destination</h3>
+          <p class="para-text">
+            Select your destination wisely; each place holds unique wonders.
+            Whether seeking <br />
+            adventure or tranquility, choose your perfect escape.
+          </p>
+        </div>
+        <div class="destination-images">
+          <div class="des-image-1">
+            <h5>Maldives</h5>
+            <img src="./Images/Rectangle 5.png" alt="" />
+          </div>
+          <div class="des-image-2">
+            <h5>Indonesia</h5>
+            <img src="./Images/Rectangle 8.png" alt="" />
+          </div>
+          <div class="des-image-3">
+            <h5>Srilanka</h5>
+            <img src="./Images/Rectangle 6.png" alt="" />
+          </div>
+          <div class="des-image-4">
+            <h5>North America</h5>
+            <img src="./Images/Rectangle 7.png" alt="" />
+          </div>
+          <div class="des-image-5">
+            <h5>Kashmir</h5>
+            <img src="./Images/Rectangle 9.png" alt="" />
+          </div>
+          <div class="des-image-6">
+            <h5>Bangladesh</h5>
+            <img src="./Images/Rectangle 11.png" alt="" />
+          </div>
+          <div class="des-image-7">
+            <h5>Bandarban</h5>
+            <img src="./Images/Rectangle 10.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- Destination area ends -->
+
+      <!-- Choose-area starts -->
+      <section class="choose-area">
+        <div class="choose-text">
+          <h3 class="section-header">Why Choose Us</h3>
+          <p class="para-text">
+            Choose us for impeccable service, expert guidance, and memorable
+            experiences—your <br />
+            gateway to seamless, enriching journeys awaits with us.
+          </p>
+        </div>
+        <div class="choose-cards">
+          <div class="choose-card-top">
+            <div class="card">
+              <img src="./Images/hotel.svg" alt="" />
+              <h3>Handpicked Hotels</h3>
+              <p class="para-text">
+                Indulge in luxury and comfort with our handpicked hotels,
+                curated for an exquisite experience that complements your unique
+                travel style.
+              </p>
+            </div>
+            <div class="card special-card">
+              <img src="./Images/map.svg" alt="" />
+              <h3 class="choose-header">World Class Service</h3>
+              <p class="para-text">
+                Our world-class service promises personalized attention,
+                seamless experiences to exceeding expectations, ensuring
+                unforgettable journeys for every traveler.
+              </p>
+            </div>
+          </div>
+          <div class="choose-card-bottom card">
+            <img src="./Images/price-tag.svg" alt="" />
+            <h3 class="choose-header">Best Price Guarantee</h3>
+            <p class="para-text">
+              Enjoy unbeatable value with our best prices. We prioritize
+              affordability without compromising quality, offering
+              budget-friendly options for every traveler's delight.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Choose-area ends -->
     </main>
     <!-- <footer>This is footer</footer> -->
   </body>
