--- a/index.html
+++ b/index.html
@@ -184,6 +184,32 @@
       </section>
       <!-- Choose-area ends -->
     </main>
-    <!-- <footer>This is footer</footer> -->
+    <footer>
+      <!-- Footer area starts -->
+      <section class="footer-area">
+        <div class="footer-top">
+          <div class="footer-logo">
+            <img src="./Images/logo.png" alt="" />
+            <h2>Master <span>Travellers</span></h2>
+          </div>
+          <p class="para-text">
+            Master Travellers redefine exploration with curated journeys, expert
+            guides, and immersive experiences, ensuring every adventure
+            surpasses expectations for all globetrotters.
+          </p>
+          <div class="footer-icons">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </div>
+        <hr />
+        <div class="footer-bottom">
+          <p>2024, All Rights Reserved</p>
+        </div>
+      </section>
+      <!-- Footer area ends -->
+    </footer>
   </body>
 </html>
