--- a/index.html
+++ b/index.html
@@ -183,6 +183,30 @@
         </div>
       </section>
       <!-- Choose-area ends -->
+      <!-- Newsletter area starts -->
+      <section class="news-area">
+        <div class="news-form">
+          <h3>Newsletter</h3>
+          <p class="para-text">
+            Get your daily dose of travel news & tips. <br />
+            Sign up today!
+          </p>
+          <hr />
+          <form action="">
+            <input type="text" placeholder="Enter Your Name" />
+            <input type="text" placeholder="Enter Your email" />
+            <button class="btn">Subscribe</button>
+          </form>
+        </div>
+        <div class="news-image">
+          <img src="./Images/news.png" alt="" />
+          <div class="news-img-text">
+            <p>Travellers.com</p>
+            <h2>Save up to 70%</h2>
+          </div>
+        </div>
+      </section>
+      <!-- Newsletter area ends -->
     </main>
     <footer>
       <!-- Footer area starts -->
