extra area added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,55 @@
       </section>
       <!-- Tours area Ends -->
 
+      <!-- Extra package area -->
+      <section class="package-area">
+        <div class="package-images">
+          <img src="./Images/Group1.png" alt="" />
+          <img src="./Images/Group2.png" alt="" />
+          <img src="./Images/Group 40089.png" alt="" />
+        </div>
+        <div class="package-text">
+          <h2 class="section-header">Our Special Packages</h2>
+          <p class="para-text">
+            Explore diverse cultures, savor exquisite cuisines, and create
+            lasting memories with our meticulously crafted and unforgettable
+            tour packages worldwide.
+          </p>
+
+          <div class="package-tours">
+            <div class="card special-card">
+              <h3>Bangladesh Discovery</h3>
+              <p class="para-text">
+                Immerse in the rich cultural tapestry of Bangladesh with a 7-day
+                tour exploring historical landmarks, vibrant markets, and serene
+                landscapes.
+              </p>
+            </div>
+            <br />
+            <div class="card special-card">
+              <h3>American Adventure Extravaganza</h3>
+              <p class="para-text">
+                Embark on a 15-day journey through the USA, from the bustling
+                streets of New York to the scenic beauty of California, blending
+                city excitement with natural wonders.
+              </p>
+            </div>
+            <br />
+            <div class="card special-card">
+              <h3>Maldivian Paradise Escape</h3>
+              <p>
+                Indulge in a week-long retreat in the Maldives, where
+                crystal-clear waters and overwater bungalows set the stage for
+                ultimate relaxation and tropical bliss.
+              </p>
+            </div>
+            <br />
+            <button class="btn">See More Packages</button>
+          </div>
+        </div>
+      </section>
+      <!-- Extra package area -->
+
       <!-- Destination area starts-->
       <section class="destination-area">
         <div class="destination-text">
