project done and reviewed

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <br />
             <div class="card special-card">
               <h3>Maldivian Paradise Escape</h3>
-              <p>
+              <p class="para-text">
                 Indulge in a week-long retreat in the Maldives, where
                 crystal-clear waters and overwater bungalows set the stage for
                 ultimate relaxation and tropical bliss.
