project done and reviewed

--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
         <div class="news-form">
           <h3>Newsletter</h3>
           <p class="para-text">
-            Get your daily dose of travel news & tips. <br />
-            Sign up today!
+            Get your daily dose of travel news & tips. Sign up today!
           </p>
           <hr />
           <form action="">
